pkgs/unnu_ce/lib/src/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_import

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:unnu_ce/src/bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_soar_init(
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_destroy();

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_start();

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_stop();

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_reset();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_oga_init(
  ffi.Pointer<ffi.Char> model_path,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_oga_prompt(
  ffi.Pointer<ffi.Char> prompt,
);

@ffi.Native<ffi.Void Function(OgaResultCallback)>()
external void unnu_set_oga_result_callback(
  OgaResultCallback callback,
);

@ffi.Native<ffi.Void Function()>()
external void unnu_unset_oga_result_callback();

final class UnnuSentence extends ffi.Struct {
  external ffi.Pointer<ffi.Char> text;

  @ffi.Int()
  external int length;
}

typedef UnnuSentence_t = UnnuSentence;

enum SoarRunFlags {
  /// No special flags set
  SOAR_SML_RUN_NONE(0),

  /// User included --self flag when running agent
  SOAR_SML_RUN_SELF(1),

  /// User ran all agents
  SOAR_SML_RUN_ALL(2),

  /// User explicitly requested corpus to update
  SOAR_SML_UPDATE_CORPUS(4),

  /// User explicitly requested corpus to not update
  SOAR_SML_DONT_UPDATE_CORPUS(8);

  final int value;
  const SoarRunFlags(this.value);

  static SoarRunFlags fromValue(int value) => switch (value) {
    0 => SOAR_SML_RUN_NONE,
    1 => SOAR_SML_RUN_SELF,
    2 => SOAR_SML_RUN_ALL,
    4 => SOAR_SML_UPDATE_CORPUS,
    8 => SOAR_SML_DONT_UPDATE_CORPUS,
    _ => throw ArgumentError('Unknown value for SoarRunFlags: $value'),
  };
}

enum SoarDataType {
  SOAR_BOOL(0),
  SOAR_INT(1),
  SOAR_FLOAT(2),
  SOAR_STRING(3),
  SOAR_ELEMENTXML(4),
  SOAR_ERROR(5);

  final int value;
  const SoarDataType(this.value);

  static SoarDataType fromValue(int value) => switch (value) {
    0 => SOAR_BOOL,
    1 => SOAR_INT,
    2 => SOAR_FLOAT,
    3 => SOAR_STRING,
    4 => SOAR_ELEMENTXML,
    5 => SOAR_ERROR,
    _ => throw ArgumentError('Unknown value for SoarDataType: $value'),
  };
}

enum UnnuLearningProfile {
  DEITY(0),
  SPHINX(1),
  ORACLE(2),
  PHILOSOPHER(3),
  CHILD(4);

  final int value;
  const UnnuLearningProfile(this.value);

  static UnnuLearningProfile fromValue(int value) => switch (value) {
    0 => DEITY,
    1 => SPHINX,
    2 => ORACLE,
    3 => PHILOSOPHER,
    4 => CHILD,
    _ => throw ArgumentError('Unknown value for UnnuLearningProfile: $value'),
  };
}

final class UnnuLearningConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> prompt;

  @ffi.Int()
  external int length;

  @ffi.UnsignedInt()
  external int profileAsInt;

  UnnuLearningProfile get profile =>
      UnnuLearningProfile.fromValue(profileAsInt);
}

typedef UnnuLearningConfig_t = UnnuLearningConfig;

final class UnnuOgaResult extends ffi.Struct {
  external ffi.Pointer<ffi.Char> result;

  @ffi.Int()
  external int length;
}

typedef UnnuOgaResult_t = UnnuOgaResult;
typedef OgaResultCallbackFunction = ffi.Void Function(UnnuOgaResult_t result);
typedef DartOgaResultCallbackFunction = void Function(UnnuOgaResult_t result);
typedef OgaResultCallback =
    ffi.Pointer<ffi.NativeFunction<OgaResultCallbackFunction>>;
